--- a/src/css/evaluacionformulario/style.css
+++ b/src/css/evaluacionformulario/style.css
@@ -383,7 +383,7 @@ body {
 
 .point-item.selected .point-box {
     background: currentColor;
-    color: white;
+    color: rgb(0, 0, 0, 0.5);
     border-color: currentColor;
     transform: scale(1.1);
     box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);
